# surg-bench

./: .env.template  .gitignore  CHANGES.md  MODEL_COMMANDS.md  README.md  REPORT_GENERATION.md  TEST_STEPS_AND_MODELS.md  generate_public_site.py  generate_report.py  providers.yaml  pyproject.toml  requirements-optional.txt  requirements.txt
docs/: index.html
docs/assets/: app.js  public-benchmark-data.js  site.css
src/evalsys/: __init__.py  cli.py  config.py  dataset.py  logging_setup.py  pdf_extractor.py  prompting.py  reporting.py  utils.py
src/grading/: __init__.py  base.py  llm_grader.py
src/providers/: __init__.py  anthropic_provider.py  base.py  cohere_provider.py  gemini_provider.py  groq_provider.py  mistral_provider.py  openai_provider.py  openai_reasoning_provider.py  openrouter_provider.py  xai_provider.py
tests/: test_extractor_smoke.py  test_prompt_packing.py
