[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-evalsys"
version = "0.1.0"
description = "Medical Q and A evaluation system with multi provider benchmarking"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
